Make some refactorings and finalize the API documentation
