# product-api/handlers/get.go
@@ -1,0 +1,64 @@
+package handlers
+
+import (
+	"github.com/kahvecikaan/buildingMicroservices/product-api/data"
+	"net/http"
+)
+
+// swagger:route GET /products products listProducts
+// Returns a list of products
+// responses:
+//
+//	200: productsResponse
+
+// ListAll handles GET requests and returns all current products
+func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
+	p.l.Println("[DEBUG] get all records")
+
+	prods := data.GetProducts()
+
+	err := data.ToJSON(prods, rw)
+	if err != nil {
+		// we should never be here but log the error just in case
+		p.l.Println("[ERROR] serializing product", err)
+	}
+}
+
+// swagger:route GET /products/{id} products listSingle
+// Returns a single product from the database
+// responses:
+//
+//	200: productResponse
+//	404: errorResponse
+
+// ListSingle handles GET requests to retrieve a single product
+func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
+	id := getProductID(r)
+
+	p.l.Println("[DEBUG] get record id", id)
+
+	prod, err := data.GetProductByID(id)
+
+	switch err {
+	case nil:
+
+	case data.ErrProductNotFound:
+		p.l.Println("[ERROR] fetching product", err)
+
+		rw.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	default:
+		p.l.Println("[ERROR] fetching product", err)
+
+		rw.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	}
+
+	err = data.ToJSON(prod, rw)
+	if err != nil {
+		// we should never be here but log the error just in case
+		p.l.Println("[ERROR] serializing product", err)
+	}
+}
