# product-api/handlers/put.go
@@ -1,0 +1,39 @@
+package handlers
+
+import (
+	"github.com/kahvecikaan/buildingMicroservices/product-api/data"
+	"net/http"
+)
+
+// swagger:route PUT /products/{id} products updateProduct
+// Update a products details
+//
+// responses:
+//
+//	201: noContentResponse
+//	404: errorResponse
+//	422: errorValidation
+
+// Update handles PUT requests to update products
+func (p *Products) Update(rw http.ResponseWriter, r *http.Request) {
+	// fetch the product from the context
+	prod := r.Context().Value(KeyProduct{}).(*data.Product)
+	p.l.Println("[DEBUG] updating record id", prod.ID)
+
+	err := data.UpdateProduct(prod)
+	if err == data.ErrProductNotFound {
+		p.l.Println("[ERROR] product not found", err)
+
+		rw.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: "Product not found"}, rw)
+		return
+	}
+
+	if err != nil {
+		http.Error(rw, "Product not found", http.StatusInternalServerError)
+		return
+	}
+
+	// write the no content success header
+	rw.WriteHeader(http.StatusNoContent)
+}
